
.Bug fixes
- Fix index terms requiring two characters instead of just one (see https://github.com/asciidoc/asciidoc-py3/pull/2#issuecomment-392605876)
- Properly capture and use colophon, dedication, and preface for docbooks in Japanese (see https://github.com/asciidoc/asciidoc-py3/pull/2#issuecomment-392623181)
- make install did not include the unwraplatex.py filter

.Testing
- Commit generated test files to the repository for continuous integration
- Test against Python 3.5+ on Travis-CI

Version 8.6.10 (2017-09-22)
---------------------------
.Additions and changes
- Improve reproducibility of builds (e.g. support SOURCE_DATE_EPOCH)
- Add SVG output support
- Improve documentation
- Update translations
- Full list of changes is at https://github.com/asciidoc/asciidoc/compare/asciidoc:8.6.9...asciidoc:8.6.10

Version 8.6.9 (2013-11-09)
--------------------------
.Additions and changes
- 'html5', 'xhtml11' and 'slidy'  outputs now wrap 'pre' element
  contents at right margin (see
https://groups.google.com/group/asciidoc/browse_thread/thread/9877a316b7a47309).
- Vim syntax file: highlight line breaks in lists (patch submitted by
  Alex Efros). See
  https://groups.google.com/group/asciidoc/browse_thread/thread/5145e4c0b65cde0a).
- Vim syntax file: fixed highlighting of lines with spaces preceding
  an indented paragraph.  See
  https://groups.google.com/group/asciidoc/browse_thread/thread/5145e4c0b65cde0a
- Vim syntax file: dropped ')' from list of illegal characters
  following opening quote. See
  https://groups.google.com/group/asciidoc/browse_thread/thread/1a60eb4507a0555f/264c39c6a89fc7a0
- Added {plus} intrinsic attribute. See
  http://code.google.com/p/asciidoc/issues/detail?id=14
- Allow `tabsize=0 in` configuration file. See
  https://groups.google.com/group/asciidoc/browse_thread/thread/c88457020288ce1d
- Removed 'wordpress' backend into the blogpost project (where it
  belongs) as an AsciiDoc backend plugin.
- Added HTML5 footer badges.